Actualizar información del Mundial de Clubes en la agenda y agregar iframe para visualización de partidos.

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,14 +1,15 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">ROLAND GARROS · TENIS</h3>
+  <h3 class="evento-text">MUNDIAL DE CLUBES</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Del 19 de mayo al 8 de junio</strong
+    <strong>Del 14 de junio al 13 de julio</strong
     ><!-- <i class="bi bi-arrow-right"></i> -->
     &nbsp;
   </span>
   <span class="agenda-text">
-    <a href="acestream://714e14e6d6e27660fd25a75b57b0ac5580fe705d">EUROSPORT 1</a>
-    ||
-    <a href="acestream://dc4ccb9e72550bc72be9360aa7d77e337ad11ecc">EUROSPORT 2</a>
+    Para ver los partidos del Mundial de Clubes, puedes hacerlo desde DAZN
+    totalmente <strong>gratis</strong>, tan solo regístrandote. Muchos de los
+    partidos se podrán ver en abierto en Telecinco o Cuatro. Consulta dónde ver
+    cada partido en la agenda de arriba.
   </span>
 </div>
