--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -141,10 +141,22 @@
       ></iframe>
     </div>
   </div> -->
+<div class="iframe">
+  <iframe
+    id="ftv_iframe"
+    name="ftv_iframe"
+    src="https://widgets.futbolenlatv.com/partidos/competition/mundial-de-clubes?color=005df8&culture=es-ES"
+    width="400"
+    height="401"
+    frameborder="0"
+    scrolling="auto"
+    style="margin-bottom: 10px"
+  ></iframe>
+</div>
 
-  <!-- <div>
+  <div>
     <app-agenda-evento-text></app-agenda-evento-text>
-  </div> -->
+  </div>
 
   <h4 class="text-enlaces-agenda-completa">
     Para ver la agenda deportiva<!--completa-->, visita la web de&nbsp;
@@ -247,9 +259,14 @@
         target="_blank"
         >Play Store</a
       >
-      para Android.  
-      <i class="bi bi-exclamation-triangle-fill" style="color: #ffc107; margin-right: 5px; vertical-align: middle;"></i>
-      <strong>No se puede instalar Ace Stream en dispositivos con iOS (Apple)</strong>.
+      para Android.
+      <i
+        class="bi bi-exclamation-triangle-fill"
+        style="color: #ffc107; margin-right: 5px; vertical-align: middle"
+      ></i>
+      <strong
+        >No se puede instalar Ace Stream en dispositivos con iOS (Apple)</strong
+      >.
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
