--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -371,6 +371,14 @@ html {
   margin-bottom: 10px;
 }
 
+.iframe {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .spinner-container {
   position: absolute;
   top: 50%;
