Corregir error tipográfico en el texto de visualización del Mundial de Clubes

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -8,7 +8,7 @@
   </span>
   <span class="agenda-text">
     Para ver los partidos del Mundial de Clubes, puedes hacerlo desde DAZN
-    totalmente <strong>gratis</strong>, tan solo regístrandote. Muchos de los
+    totalmente <strong>gratis</strong>, tan solo registrándote. Muchos de los
     partidos se podrán ver en abierto en Telecinco o Cuatro. Consulta dónde ver
     cada partido en la agenda de arriba.
   </span>
