Eliminar comentario de la sección de mensajes informativos en el componente de enlaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
     </div>
   </nav>
 
-  <div
+  <!-- <div
     class="info-message-responsive"
     *ngIf="!location.href.includes('vercel.app')"
   >
@@ -48,7 +48,7 @@
         >HAZ CLIC PARA ACCEDER</a
       >
     </div>
-  </div>
+  </div> -->
 
   <div class="scroll-to-links" *ngIf="isMobile">
     <button class="scroll-to-links-button" (click)="scrollToLinks()">
