--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@
           style="
             list-style: none;
             display: flex;
-            gap: 2rem;
+            gap: 4.5rem;
             margin: 0;
             padding: 0;
             justify-content: center;
@@ -110,21 +110,21 @@
           <li>
             <a
               href="#enlaces"
-              style="color: white; text-decoration: none; font-weight: bold"
+              style="color: white; text-decoration: none; font-weight: bold; font-size: 1.35rem;"
               >Enlaces</a
             >
           </li>
           <li>
             <a
               href="#como-reproducir"
-              style="color: white; text-decoration: none; font-weight: bold"
+              style="color: white; text-decoration: none; font-weight: bold; font-size: 1.35rem;"
               >Cómo reproducir</a
             >
           </li>
           <li>
             <a
               href="#contacto"
-              style="color: white; text-decoration: none; font-weight: bold"
+              style="color: white; text-decoration: none; font-weight: bold; font-size: 1.35rem;"
               >Contacto</a
             >
           </li>
