Actualizar rutas de imagen y mejorar formato de estilos en enlaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
         </button>
         <div class="navbar-logo">
           <img
-            src="images/balon.png"
+            src="/images/balon.png"
             alt="Logo"
             class="logo"
             width="50"
@@ -110,21 +110,36 @@
           <li>
             <a
               href="#enlaces"
-              style="color: white; text-decoration: none; font-weight: bold; font-size: 1.35rem;"
+              style="
+                color: white;
+                text-decoration: none;
+                font-weight: bold;
+                font-size: 1.35rem;
+              "
               >Enlaces</a
             >
           </li>
           <li>
             <a
               href="#como-reproducir"
-              style="color: white; text-decoration: none; font-weight: bold; font-size: 1.35rem;"
+              style="
+                color: white;
+                text-decoration: none;
+                font-weight: bold;
+                font-size: 1.35rem;
+              "
               >Cómo reproducir</a
             >
           </li>
           <li>
             <a
               href="#contacto"
-              style="color: white; text-decoration: none; font-weight: bold; font-size: 1.35rem;"
+              style="
+                color: white;
+                text-decoration: none;
+                font-weight: bold;
+                font-size: 1.35rem;
+              "
               >Contacto</a
             >
           </li>
@@ -176,9 +191,9 @@
       <i class="bi bi-arrow-down-short" style="font-size: x-large"></i>
     </button>
   </div>
-  <!-- <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
+  <h3 class="agenda-header">AGENDA DEPORTIVA</h3>
   <div class="mini-separator"></div>
-  <div class="futbol-tv-agendas">
+  <!-- <div class="futbol-tv-agendas">
     <div class="iframe-container">
       <div class="spinner-container" *ngIf="loading[0]">
         <mat-spinner diameter="78"></mat-spinner>
@@ -260,22 +275,10 @@
       ></iframe>
     </div>
   </div> -->
-  <div class="iframe">
-    <iframe
-      id="ftv_iframe"
-      name="ftv_iframe"
-      src="https://widgets.futbolenlatv.com/partidos/competition/mundial-de-clubes?color=005df8&culture=es-ES"
-      width="400"
-      height="401"
-      frameborder="0"
-      scrolling="auto"
-      style="margin-bottom: 10px"
-    ></iframe>
-  </div>
 
-  <div>
+  <!-- <div>
     <app-agenda-evento-text></app-agenda-evento-text>
-  </div>
+  </div> -->
 
   <h4 class="text-enlaces-agenda-completa">
     Para ver la agenda deportiva<!--completa-->, visita la web de&nbsp;
@@ -384,7 +387,7 @@
         style="color: #ffc107; margin-right: 5px; vertical-align: middle"
       ></i>
       <strong
-        >No se puede instalar Ace Stream en dispositivos con iOS (Apple)</strong
+        >No se puede instalar Ace Stream en dispositivos de Apple</strong
       >.
     </p>
 
