Actualizar título del evento en agenda y ajustar estructura del componente

--- a/src/app/agenda-evento-text/agenda-evento-text.component.html
+++ b/src/app/agenda-evento-text/agenda-evento-text.component.html
@@ -1,15 +1,12 @@
 <div class="agenda-evento-text">
-  <h3 class="evento-text">MUNDIAL DE CLUBES</h3>
+  <h3 class="evento-text">WIMBLEDON - TENIS (FINAL)</h3>
   <div class="mini-separator"></div>
   <span class="agenda-text">
-    <strong>Del 14 de junio al 13 de julio</strong
-    ><!-- <i class="bi bi-arrow-right"></i> -->
-    &nbsp;
+    <strong>Alcaraz vs. Sinner</strong
+    >
+    &nbsp;<i class="bi bi-arrow-right"></i> 17:00h
   </span>
   <span class="agenda-text">
-    Para ver los partidos del Mundial de Clubes, puedes hacerlo desde DAZN
-    totalmente <strong>gratis</strong>, tan solo registrándote. Muchos de los
-    partidos se podrán ver en abierto en Telecinco o Cuatro. Consulta dónde ver
-    cada partido en la agenda de arriba.
+    <a href="acestream://b2a4d1eba9b46df5f52a87105df779f9d39abeb4">OPCIÓN 1</a> | <a href="acestream://edd06f11e1cef292a1d795e15207ef2f580e298c">OPCIÓN 2</a>
   </span>
 </div>
