--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -198,7 +198,7 @@ html {
 
 .footer {
   flex-shrink: 0;
-  background: linear-gradient(135deg, #004d40, #00695c);
+  background: linear-gradient(135deg, #333, #444);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -413,8 +413,9 @@ html {
   max-width: 450px;
   margin: 30px auto;
   padding: 25px;
-  background: linear-gradient(135deg, #1e1e1e, #2a2a2a);
+  background: linear-gradient(to top, #000000, #222020);
   border-radius: 12px;
+  border: 1px solid white;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
   color: #f5f5f5;
   text-align: center;
