Corregir título de sección y mejorar texto en enlaces alternativos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -353,17 +353,56 @@
   </div>
 
   <div class="otra-web">
-    <h2 style="color: white; text-align: center">OTRA WEB DE ENLACES</h2>
+    <h2 style="color: white; text-align: center">OTRAS WEBS DE ENLACES</h2>
     <div class="mini-separator"></div>
     <p>
-      En el caso de que el enlace que busques no funcione, puedes probar en esta
-      web:
+      En el caso de que el enlace que busques no funcione, puedes probar en
+      estas otras webs:
+    </p>
+    <div
+      style="display: flex; gap: 1.5rem; flex-wrap: wrap; justify-content: center"
+    >
       <a
         href="https://www.socialcreator.com/xupimarc2/?s=289267&integ_ch=1"
         target="_blank"
-        >HAZ CLIC PARA ACCEDER</a
       >
-    </p>
+        <img
+          src="https://www.socialcreator.com/srv/imgs/gen/74109_icohome.png"
+          style="border: 1px solid white; margin-top: 1rem"
+          title="Xupimarc2"
+          width="90"
+          height="90"
+          alt="Xupimarc2"
+        />
+      </a>
+      <a
+        href="https://ipfs.io/ipns/elcano.top"
+        target="_blank"
+      >
+        <img
+          src="https://www.solodev.com/file/97299e37-e2ac-11ec-b9ad-0eaef3759f5f/ipfs-logo-icon-b.png"
+          style="border: 1px solid white; margin-top: 1rem;"
+          title="Elcano.top"
+          width="90"
+          height="90"
+          alt="Xupimarc2"
+        />
+      </a>
+      <a
+        href="https://www.rbtvplus01.com/es"
+        target="_blank"
+        style="height: fit-content;"
+      >
+        <img
+          src="https://statics2.mfctai51.xyz/img/rb/web-logo-rbplus.png"
+          style="border: 1px solid white; margin-top: 1rem"
+          title="RBTV+"
+          width="110"
+          height="40"
+          alt="Xupimarc2"
+        />
+      </a>
+    </div>
   </div>
 
   <div class="how-to-play-container" id="como-reproducir">
@@ -385,31 +424,30 @@
         class="bi bi-exclamation-triangle-fill"
         style="color: #ffc107; margin-right: 5px; vertical-align: middle"
       ></i>
-      <strong
-        >No se puede instalar Ace Stream en dispositivos de Apple</strong
-      >.
+      <strong>No se puede instalar Ace Stream en dispositivos de Apple</strong>.
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Android</h4>
     <p class="how-to-play-text">
-      Para reproducir los enlaces en tu Android, una vez instalado Ace
-      Stream, puedes abrir el enlace haciendo clic en él directamente, lo que
-      abrirá Ace Stream y reproducirá el contenido. También puedes copiar el
-      enlace, abrir Ace Stream manualmente y pegar el enlace en el cuadro de
-      texto "Enter content link".
+      Para reproducir los enlaces en tu Android, una vez instalado Ace Stream,
+      puedes abrir el enlace haciendo clic en él directamente, lo que abrirá Ace
+      Stream y reproducirá el contenido. También puedes copiar el enlace, abrir
+      Ace Stream manualmente y pegar el enlace en el cuadro de texto "Enter
+      content link".
     </p>
 
     <h4 style="color: white; margin: 0 20px 20px 29px">Windows</h4>
     <p class="how-to-play-text">
       Una vez instalado Ace Stream en Windows, tienes dos formas de reproducir
-      los enlaces: la primera es haciendo clic directamente en el enlace, seleccionar Ace Player en la ventana que aparece y
-      esperar al anuncio para ver el contenido. La segunda opción es copiar el enlace, abrir Ace Player manualmente
-      y pegar el enlace en la opción "Medio"
-      <i class="bi bi-arrow-right"></i> "Open Ace Stream Content ID". <strong>Nota:</strong> Asegúrate
-      de tener abierto Ace Stream Engine (ace_engine / Ace Stream HD), si no,
-      ábrelo tú manualmente desde la ruta de instalación de Ace Stream
-      (C:\Users\<i>tuusuario</i>\AppData\Roaming \ACEStream\engine y abre
-      ace_engine.exe).
+      los enlaces: la primera es haciendo clic directamente en el enlace,
+      seleccionar Ace Player en la ventana que aparece y esperar al anuncio para
+      ver el contenido. La segunda opción es copiar el enlace, abrir Ace Player
+      manualmente y pegar el enlace en la opción "Medio"
+      <i class="bi bi-arrow-right"></i> "Open Ace Stream Content ID".
+      <strong>Nota:</strong> Asegúrate de tener abierto Ace Stream Engine
+      (ace_engine / Ace Stream HD), si no, ábrelo tú manualmente desde la ruta
+      de instalación de Ace Stream (C:\Users\<i>tuusuario</i>\AppData\Roaming
+      \ACEStream\engine y abre ace_engine.exe).
     </p>
 
     <hr style="border: 0; border-top: 1px solid #444; margin: 2rem 0" />
@@ -417,11 +455,11 @@
     <p class="how-to-play-text">
       Para reproducir los enlaces correctamente en tu dispositivo, es
       recomendable cambiar ciertos parámetros en la configuración de Ace Stream
-      y de Ace Player (de Ace Player, solo en Windows). Primero, haz clic derecho sobre el
-      icono de Ace Stream en la barra de tareas y selecciona "Options..." (En
-      Android ir a la configuración). Allí, cambia los valores de "VOD buffer" a
-      10 y "Live buffer" a 60. Después, en Ace Player, ve en la parte de arriba
-      a "Herramientas"
+      y de Ace Player (de Ace Player, solo en Windows). Primero, haz clic
+      derecho sobre el icono de Ace Stream en la barra de tareas y selecciona
+      "Options..." (En Android ir a la configuración). Allí, cambia los valores
+      de "VOD buffer" a 10 y "Live buffer" a 60. Después, en Ace Player, ve en
+      la parte de arriba a "Herramientas"
       <i class="bi bi-arrow-right"></i> "Preferencias"
       <i class="bi bi-arrow-right"></i> "Vídeo" y en Desentrelazado selecciona
       "Automático" y Modo <i class="bi bi-arrow-right"></i> "Yadif (2x)".
@@ -587,4 +625,3 @@
     </button>
   </div>
 </div>
-
