Actualizar color del texto en el cartel de aviso de actualización de enlaces

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div
     style="
       background: #ffc107;
-      color: #ffffff;
+      color: #222222;
       text-align: center;
       padding: 0.7rem 1rem;
       font-weight: bold;
