Descomentar el cartel de aviso de actualización de enlaces en el HTML

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <!-- Cartel de aviso de actualización de enlaces -->
-  <div
+<!-- Cartel de aviso de actualización de enlaces -->
+<!-- <div
     style="
       background: #ffc107;
       color: #222222;
@@ -14,7 +14,7 @@
   >
     <i class="bi bi-info-circle-fill" style="margin-right: 8px"></i>
     Enlaces de canales en proceso de actualización
-  </div>
+  </div>  -->
 
   <nav class="navbar">
     <div
