Actualizar enlaces de otras webs y mejorar estilos de imágenes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -383,46 +383,38 @@
       estas otras webs:
     </p>
     <div class="otra-web-links">
-      <a
-        href="https://www.socialcreator.com/xupimarc2/?s=289267&integ_ch=1"
-        target="_blank"
-        class="otra-web-link"
-      >
-        <img
-          src="https://www.socialcreator.com/srv/imgs/gen/74109_icohome.png"
-          style="border: 1px solid white; margin-top: 1rem"
-          title="Xupimarc2"
-          width="90"
+      <a href="https://www.socialcreator.com/xupimarc2/?s=289267&integ_ch=1" 
+         target="_blank" 
+         class="otra-web-link">
+        <img src="https://www.socialcreator.com/srv/imgs/gen/74109_icohome.png"
+             alt="Xupimarc2"
+             title="Xupimarc2"
+             width="180"
+             height="auto"
+             style="border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 12px;"
           height="90"
           alt="Xupimarc2"
         />
       </a>
-      <a
-        href="https://ipfs.io/ipns/elcano.top"
-        target="_blank"
-      >
-        <img
-          src="https://www.solodev.com/file/97299e37-e2ac-11ec-b9ad-0eaef3759f5f/ipfs-logo-icon-b.png"
-          style="border: 1px solid white; margin-top: 1rem;"
-          title="Elcano.top"
-          width="90"
-          height="90"
-          alt="Xupimarc2"
-        />
+      <a href="https://ipfs.io/ipns/elcano.top" 
+         target="_blank" 
+         class="otra-web-link">
+        <img src="https://www.solodev.com/file/97299e37-e2ac-11ec-b9ad-0eaef3759f5f/ipfs-logo-icon-b.png"
+             alt="Elcano.top"
+             title="Elcano.top"
+             width="180"
+             height="auto"
+             style="border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 12px;" />
       </a>
-      <a
-        href="https://www.rbtvplus01.com/es"
-        target="_blank"
-        style="height: fit-content;"
-      >
-        <img
-          src="https://statics2.mfctai51.xyz/img/rb/web-logo-rbplus.png"
-          style="border: 1px solid white; margin-top: 1rem"
-          title="RBTV+"
-          width="110"
-          height="40"
-          alt="Xupimarc2"
-        />
+      <a href="https://www.rbtvplus01.com/es" 
+         target="_blank" 
+         class="otra-web-link">
+        <img src="https://statics2.mfctai51.xyz/img/rb/web-logo-rbplus.png"
+             alt="RBTV+"
+             title="RBTV+"
+             width="180"
+             height="auto"
+             style="border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 12px;" />
       </a>
     </div>
   </div>
