Mejorar el botón de envío en el formulario de contacto añadiendo un ícono y ajustando el estilo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -619,7 +619,10 @@
         </div>
       </div>
 
-      <button type="submit" [disabled]="contactForm.invalid">Enviar</button>
+      <button type="submit" [disabled]="contactForm.invalid">
+        <i class="bi bi-send-fill"></i>
+        Enviar
+      </button>
     </form>
   </div>
 
